make a responsive page

--- a/index.html
+++ b/index.html
@@ -15,16 +15,237 @@
 
 <body>
    <div class="wrapper">
+
       <header class="header">
 
+         <div class="extra-menu">
+            <div class="container">
+               <nav class="menu">
+                  <ul class="menu__list">
+                     <li class="menu__item"><a href="#" class="menu__link">Доставка</a></li>
+                     <li class="menu__item"><a href="#" class="menu__link">Оплата</a></li>
+                     <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
+                     <li class="menu__item"><a href="#" class="menu__link">Вопрос - ответ</a></li>
+                     <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
+                  </ul>
+               </nav>
+            </div>
+         </div>
+
+         <div class="middle">
+            <div class="container">
+               <div class="middle__body">
+                  <div class="middle__logo logo">
+                     <span class="logo__img"><img src="img/logo.svg" alt="Логотип"></span>
+                     <span class="logo__text">BEAUTY</span>
+                  </div>
+                  <div class="burger"><span></span></div>
+                  <div class="middle__back-call back-call">
+                     <a class="back-call__number" href="tel:+78121234567">8 (812) 123-45-67</a>
+                     <button class="button button_green" type="button">Обратный звонок</button>
+                  </div>
+               </div>
+            </div>
+         </div>
+
+         <div class="main-menu">
+            <div class="container">
+               <nav class="menu">
+                  <ul class="menu__list">
+                     <li class="menu__item"><a href="#" class="menu__link">Парикмахерская</a></li>
+                     <li class="menu__item"><a href="#" class="menu__link">Барбершоп</a></li>
+                     <li class="menu__item"><a href="#" class="menu__link">Маникюр</a></li>
+                     <li class="menu__item"><a href="#" class="menu__link">Педикюр</a></li>
+                     <li class="menu__item"><a href="#" class="menu__link">Массаж</a></li>
+                     <li class="menu__item"><a href="#" class="menu__link">Мебель</a></li>
+                  </ul>
+               </nav>
+            </div>
+         </div>
       </header>
+
       <main>
+         <section class="first-screen">
+            <div class="container">
+               <div class="first-screen__body">
+                  <div class="first-screen__content">
+                     <h1 class="first-screen__title">Супер кресло</h1>
+                     <div class="first-screen__text">
+                        <p>
+                           Текст акции всегда отражает суть, а не просто
+                           болтовню, поэтому внимательнее
+                        </p>
+                     </div>
+                     <a href="#" class="first-screen__btn button button_white">Подробнее</a>
+                  </div>
+                  <div class="first-screen__img">
+                     <img src="img/first-screen/armchair.png" alt="Парикмахерское кресло">
+                  </div>
+               </div>
+            </div>
+         </section>
+
+         <section class="special-offers">
+            <div class="container">
+               <div class="special-offers__body">
+                  <h2 class="special-offers__title">Специальные предложения</h2>
+                  <div class="special-offers__row">
+                     <div class="special-offers__column">
+                        <div class="special-offers__item offer">
+                           <div class="offer__img"><img src="img/special-offers/barber-chair.png" alt="Кресло «Норм»">
+                           </div>
+                           <div class="offer__name">Парикмахерское кресло «Норм» гидравлическое</div>
+                           <div class="offer__price">9 900 ₽</div>
+                           <a href="#" class="offer__btn button button_full-green">Купить</a>
+                        </div>
+                     </div>
+                     <div class="special-offers__column">
+                        <div class="special-offers__item offer">
+                           <div class="offer__img"><img src="img/special-offers/barber-chair.png" alt="Кресло «Норм»">
+                           </div>
+                           <div class="offer__name">Парикмахерское кресло «Норм» гидравлическое</div>
+                           <div class="offer__price">9 900 ₽</div>
+                           <a href="#" class="offer__btn button button_full-green">Купить</a>
+                        </div>
+                     </div>
+                     <div class="special-offers__column">
+                        <div class="special-offers__item offer">
+                           <div class="offer__img"><img src="img/special-offers/barber-chair.png" alt="Кресло «Норм»">
+                           </div>
+                           <div class="offer__name">Парикмахерское кресло «Норм» гидравлическое</div>
+                           <div class="offer__price">9 900 ₽</div>
+                           <a href="#" class="offer__btn button button_full-green">Купить</a>
+                        </div>
+                     </div>
+                     <div class="special-offers__column">
+                        <div class="special-offers__item offer">
+                           <div class="offer__img"><img src="img/special-offers/barber-chair.png" alt="Кресло «Норм»">
+                           </div>
+                           <div class="offer__name">Парикмахерское кресло «Норм» гидравлическое</div>
+                           <div class="offer__price">9 900 ₽</div>
+                           <a href="#" class="offer__btn button button_full-green">Купить</a>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
+
+         <div class="about-us">
+            <div class="container">
+               <div class="about-us__body">
+                  <div class="about-us__row">
+
+                     <div class="about-us__column">
+                        <div class="about-us__item card">
+                           <div class="card__content">
+                              <h3 class="card__title">Получайте бонусы и подарки</h3>
+                              <div class="card__text">
+                                 <p>Каждый месяц разыгрываем<br>
+                                    10 000 рублей для наших клиентов</p>
+                              </div>
+                              <input class="input" type="email" placeholder="Введите e-mail">
+                           </div>
+                           <div class="card__img">
+                              <img src="img/about-us/envelope.png" alt="Конверт">
+                           </div>
+                        </div>
+                     </div>
+
+                     <div class="about-us__column">
+                        <div class="about-us__item card">
+                           <div class="card__content">
+                              <h3 class="card__title">Заходите к нам</h3>
+                              <div class="card__text">
+                                 <p>Более 300 магазинов<br>
+                                    по всей России</p>
+                              </div>
+                              <a href="#" class="card__btn button button_white">Карта магазинов</a>
+                           </div>
+                           <div class="card__img">
+                              <img src="img/about-us/autotruck.png" alt="Грузовик">
+                           </div>
+                        </div>
+                     </div>
+
+                  </div>
+               </div>
+            </div>
+         </div>
+
 
       </main>
-      <footer class="footer">
+      <footer>
+         <div class="footer">
+            <div class="container">
+               <div class="footer__body">
+
+                  <div class="footer__column">
+                     <div class="footer__social-media-list">
+                        <div class="footer__social-media-column">
+                           <a href="#" class="social-media">
+                              <svg class="social-media__img social-media__youtube">
+                                 <use href="img/social-media-icons.svg#youtube"></use>
+                              </svg>
+                           </a>
+                        </div>
+                        <div class="footer__social-media-column">
+                           <a href="#" class="social-media">
+                              <svg class="social-media__img social-media__vk">
+                                 <use href="img/social-media-icons.svg#vk"></use>
+                              </svg>
+                           </a>
+                        </div>
+                        <div class="footer__social-media-column">
+                           <a href="#" class="social-media">
+                              <svg class="social-media__img social-media__facebook">
+                                 <use href="img/social-media-icons.svg#facebook"></use>
+                              </svg>
+                           </a>
+                        </div>
+                        <div class="footer__social-media-column">
+                           <a href="#" class="social-media">
+                              <svg class="social-media__img social-media__instagram">
+                                 <use href="img/social-media-icons.svg#instagram"></use>
+                              </svg>
+                           </a>
+                        </div>
+                     </div>
+                  </div>
+
+                  <div class="footer__column">
+                     <address>198555, Невский пр. 140, офис 140</address>
+                  </div>
+
+                  <div class="footer__column">
+                     <div class="footer__back-call back-call">
+                        <a class="back-call__number" href="tel:+78121234567">8 (812) 123-45-67</a>
+                        <button class="button button_green" type="button">Обратный звонок</button>
+                     </div>
+                  </div>
+
+               </div>
+            </div>
+         </div>
+
+         <div class="copyright">
+            <div class="container">
+               <div class="copyright__body">
+                  <div class="copyright__rights">
+                     <p>Лучший магазин (с) 2019 Все права защищены. Интернет-магазин оборудования для салонов красоты
+                     </p>
+                  </div>
+                  <div class="copyright__policy">
+                     <p>Политика конфиденциальности</p>
+                  </div>
+               </div>
+            </div>
+         </div>
+
 
       </footer>
    </div>
+   <script src="js/script.js"></script>
 </body>
 
 </html>
