fix fixed header

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                   <h2 class="special-offers__title">Специальные предложения</h2>
                   <div class="special-offers__row">
                      <div class="special-offers__column">
-                        <div class="special-offers__item offer">
+                        <div class="offer">
                            <div class="offer__img"><img src="img/special-offers/barber-chair.png" alt="Кресло «Норм»">
                            </div>
                            <div class="offer__name">Парикмахерское кресло «Норм» гидравлическое</div>
@@ -100,7 +100,7 @@
                         </div>
                      </div>
                      <div class="special-offers__column">
-                        <div class="special-offers__item offer">
+                        <div class="offer">
                            <div class="offer__img"><img src="img/special-offers/barber-chair.png" alt="Кресло «Норм»">
                            </div>
                            <div class="offer__name">Парикмахерское кресло «Норм» гидравлическое</div>
@@ -109,7 +109,7 @@
                         </div>
                      </div>
                      <div class="special-offers__column">
-                        <div class="special-offers__item offer">
+                        <div class="offer">
                            <div class="offer__img"><img src="img/special-offers/barber-chair.png" alt="Кресло «Норм»">
                            </div>
                            <div class="offer__name">Парикмахерское кресло «Норм» гидравлическое</div>
@@ -118,7 +118,7 @@
                         </div>
                      </div>
                      <div class="special-offers__column">
-                        <div class="special-offers__item offer">
+                        <div class="offer">
                            <div class="offer__img"><img src="img/special-offers/barber-chair.png" alt="Кресло «Норм»">
                            </div>
                            <div class="offer__name">Парикмахерское кресло «Норм» гидравлическое</div>
